Version 1.5.5
~~~~~~~~~~~~~
* Added new checkmpifxcorr utility which makes sure an input file is valid

Version 1.5.4
~~~~~~~~~~~~~
* Support for streamstor SDK 9.0+
* Support for new Mark5 directory versions (see Haystack Mark5 memo 81)
* Don't read mark5 directories
* Use mark5ipc to lock out mark5 units
* Bug fix for post-F fringe rotation, where weights were being corrupted
* Normalise filterbank packets to power, not energy
* New polyco parser and checker is more forgiving of TEMPO2 generated polycos

Version 1.5.3, 2010 March 17
~~~~~~~~~~~~~~~~~~~~~~~~~~
* Bug fix for calculation of buffer sizes for Mk4/VLBA/VDIF format, which 
  could lead to MODE errors and the loss of a few FFTs in very rare cases
* Add an extra second to polyco valid range to ensure that exact boundary
  cases get caught by one or the other polyco

Version 1.5.2, 2009 Nov 23
~~~~~~~~~~~~~~~~~~~~~~~~~~
* Warn when difxmessage is in use so the user knows why no messages appear on the screen
* Improved real-time correlation monitoring
* Primitive support for single-thread VDIF
* Support for unmodulated VLBA format (called VLBN internally)

Version 1.5.1, 2009 Sep 8
~~~~~~~~~~~~~~~~~~~~~~~~~
* Mark5 bank switching more reliable
* Zero-weight data is not written

Version 1.5 Perth, 2008 March 7
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This version was born from the merge of the main trunk code and Walter's
native-mark5 branch.  In addition some new features were added:

1. Input file

  * HEADER O/RIDE is removed (never used) and replaced with
VIS BUFFER LENGTH, which was a compile-time constant.  Typical values for
this number are upwards of 8.

  * In the configuration table, two additional parameters have been added
after NUM CHANNELS:

  CHANNELS TO AVERAGE
  OVERSAMPLE FACTOR

Currently both of these only accept value 1.

  * In the datastream table, the format and data source parameters have
changed.  The four following parameters are now used:

  DATA FORMAT
  QUANTIZATION BITS